tests/error/comptime/check_destruct_value3.bz
function foo() -> &int32
{
	let i = 0;
	return i;
}

function test()
{
	(consteval {
		__builtin_destruct_value(foo());
	});
}
